FINALLY fix the gap below the canvas
It was displayed as an inline element the entire time wtf

--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -103,10 +103,10 @@ h5
 canvas
   margin-top: 60vh
 
+  display: block
+
   width: 100%
   height: 80vh
-
-  margin-bottom: -5px
 
   pointer-events: none
   -webkit-touch-callout: none
